package restaurante.modelo;

public class BaseArroz extends Plato {

    public BaseArroz(){
        super(2.5,200,"Delicioso arroz 3 delicias",0,0,0);
    }
}
