package restaurante.modelo;

public class BaseTallarines extends Plato{
    
    public BaseTallarines(){
        super(3.0,230,"Tallarines Pad Mei",0,0,0);
    }

}
