@startuml
 skinparam groupInheritance 3

 class PedidoRestaurante{
     - horaConfirmacion : Date
     - horaRecibido : Date
      void addPlatosPedido(Plato platoPedido)
      void deletePlatoPedido(Plato platoPedido)
      void confirmarPedido()
      void cancelarPedido()
      void reclamarRetraso()
 }

abstract class Plato{
     # precio : double
     # calorias : double
     # descripcion : String
     # numeroComplementosGamba : int
     # numeroComplementosPollo : int
     # numeroComplementosTernera : int
}

class BaseArroz
class BaseTallarines
abstract class Decorador{
Plato getPlato()
boolean tieneComplementos()
boolean tieneSalsa()
String getDescripcionBase()
String getDescripcionSalsa()
}
abstract class DecoradorSalsa
abstract class DecoradorComplemento

class ComplementoPollo
class ComplementoTernera
class ComplementoGamba

DecoradorComplemento <|-- ComplementoPollo
DecoradorComplemento <|-- ComplementoTernera
DecoradorComplemento <|-- ComplementoGamba

class SalsaCacahuetes
class SalsaOstras


DecoradorSalsa <|-- SalsaCacahuetes
DecoradorSalsa <|-- SalsaOstras

Plato <|-- BaseArroz
Plato <|-- BaseTallarines
Plato  <|-- Decorador
Decorador <|-- DecoradorComplemento
Decorador <|-- DecoradorSalsa
PedidoRestaurante o-- "0..* platosPedido" Plato

Decorador o--> "plato 1" Plato

@enduml